--- a/public/lib/highlight.js/styles/railscasts.css
+++ b/public/lib/highlight.js/styles/railscasts.css
@@ -8,7 +8,7 @@ Railscasts-like style (c) Visoft, Inc. (Damien White)
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  background: #232323;
+  background: #F5F5F5;
   color: #e6e1dc;
   -webkit-text-size-adjust: none;
 }
