--- a/public/customstyle.css
+++ b/public/customstyle.css
@@ -4,7 +4,7 @@
 */
 .scrollable {
 	display: block;
-	height: 30%;
+	height: 38%;
 	margin-left: auto;
 	margin-right: auto;
 	width: 75%;
@@ -29,6 +29,10 @@
 	color: white;
 }
 
+#rawCode {
+	padding: 3%;
+	width: 75%;
+}
 
 #formattedCode {
 	display: block;
