--- a/public/customstyle.css
+++ b/public/customstyle.css
@@ -1,3 +1,6 @@
+h3 {
+    text-align: center;
+}
 
 /**
 	CSS by Class
@@ -58,4 +61,47 @@
 	height: 90%;
 	width: 50%;
 	top: 20%;
+}
+
+.documentation-form button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+.hidden {
+    display: none;
+}
+
+.documentation-button {
+    width: 100%;
+}
+
+.documentation-form {
+    background-color: white;
+    border: 2px solid black;
+    padding: 2%;
+    padding-left: 2%;
+    padding-right: 2%;
+    width: 50%;
+}
+
+.documentation-form input {
+    width: 98%;
+}
+
+.documentation-menu {
+    background-color: white;
+    border: 2px solid black;
+    left: 50%;
+    height: auto;
+    padding-bottom: 0%;
+    position: absolute;
+    top: 50%;
+    width: 25%;
+}
+
+.select-wrapper {
+    text-align: center;
 }
