--- a/public/customstyle.css
+++ b/public/customstyle.css
@@ -53,6 +53,12 @@ h3 {
 	color: white;
 }
 
+#toggleButton {
+	background-color: #C1003A;
+	border-color: #990030;
+	color: white;
+}
+
 #navigator {
 	cursor: pointer;
 }
@@ -104,4 +110,11 @@ h3 {
 
 .select-wrapper {
     text-align: center;
+}
+
+.well {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	width: 50%;
 }
